# pdraw

./: .MODULE_LICENSE_BSD  .clang-format  AUTHORS  CMakeLists.txt  COPYING  README.md  atom.mk
apps/pdraw_desktop/: atom.mk  pdraw_desktop.c  pdraw_desktop.h  pdraw_desktop_ext_tex.c  pdraw_desktop_ui.c  pdraw_desktop_view.cpp
apps/pdraw_ios/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
apps/pdraw_ios/Base.lproj/: Main.storyboard
apps/pdraw_ios/PDrAW.xcodeproj/: project.pbxproj
apps/pdraw_linux/: atom.mk  pdraw_linux.c  pdraw_linux.h
apps/pdraw_macos/: atom.mk  pdraw_macos.c  pdraw_macos.h
apps/pdraw_raspi/: atom.mk  pdraw_raspi.c  pdraw_raspi.h
config/: atom.mk  buildcfg.py
config/android/: global.config  product.mk
config/ios/: global.config  product.mk
config/macos/: deps.mk  global.config  libARNetwork.config  product.mk
config/pclinux/: deps.mk  ffmpeg-libav.config  global.config  libpdraw_python.config  product.mk
config/raspi/: deps.mk  global.config  product.mk
doc/: .gitignore  class_diagram.graphml  index.rst  installation.rst  metadata.rst  overview.rst  photo-metadata.rst  pipeline.graphml  sphinx-doc.yaml  userguide.rst  video-metadata.rst
doc/examples/: Makefile  atom.mk.sample  main.c
doc/graphs/: class_diagram.graphml  pipeline.graphml
doc/metadata/: v2v3.c
doc/video-metadata/: v1.c  v2v3.c
gst-pdraw/: atom.mk  gstpdrawsrc.c  gstpdrawsrc.h
libpdraw/: CMakeLists.txt  atom.mk  atom.mkbak  pdraw.in
libpdraw-backend/: atom.mk
libpdraw-backend/include/pdraw/: pdraw_backend.h  pdraw_backend.hpp
libpdraw-backend/src/: pdraw_backend_impl.cpp  pdraw_backend_impl.hpp  pdraw_backend_wrapper.cpp
libpdraw-backend/tests/: pdraw_audiosourcesink_test.c  pdraw_backend_test.c  pdraw_codedsourcesink_test.c  pdraw_rawsourcesink_test.c  pdraw_vipcsourcesink_test.c
libpdraw-gles2hud/: atom.mk
libpdraw-gles2hud/include/pdraw/: pdraw_gles2hud.h
libpdraw-gles2hud/src/: pdraw_gles2hud.cpp  pdraw_gles2hud_icons.cpp  pdraw_gles2hud_icons_data.cpp  pdraw_gles2hud_instruments.cpp  pdraw_gles2hud_priv.h  pdraw_gles2hud_shaders.cpp  pdraw_gles2hud_shapes.cpp  pdraw_gles2hud_text.cpp  pdraw_gles2hud_text_profont36.cpp
libpdraw-vsink/: CMakeLists.txt  atom.mk
libpdraw-vsink/include/pdraw-vsink/: pdraw_vsink.h
libpdraw-vsink/src/: pdraw_vsink.c
libpdraw-vsink/tests/: pdraw_vsink_test.c
libpdraw/android/: build.gradle
libpdraw/android/jni/: Android.mk  Application.mk
libpdraw/android/src/main/: AndroidManifest.xml
libpdraw/android/src/main/java/net/akaaba/libpdraw/: Pdraw.java
libpdraw/android/src/main/jni/: Android.mk  pdraw_jni.c
libpdraw/include/: libpdraw.h  libpdraw.hpp  libpdraw_defs.h
libpdraw/include/pdraw/: pdraw.h  pdraw.hpp  pdraw_defs.h
libpdraw/python/: aconfig.in  pdraw_python.i  test.py  typemaps_pdraw.i  typemaps_std.i
libpdraw/src/: pdraw.cpp  pdraw.hpp  pdraw_alsa_audio.cpp  pdraw_alsa_audio.hpp  pdraw_alsa_source.cpp  pdraw_alsa_source.hpp  pdraw_avcdecoder.cpp  pdraw_avcdecoder.hpp  pdraw_avcdecoder_amediacodec.cpp  pdraw_avcdecoder_amediacodec.hpp  pdraw_avcdecoder_ffmpeg.cpp  pdraw_avcdecoder_ffmpeg.hpp  pdraw_avcdecoder_mediacodec.cpp  pdraw_avcdecoder_mediacodec.hpp  pdraw_avcdecoder_videocoreomx.cpp  pdraw_avcdecoder_videocoreomx.hpp  pdraw_avcdecoder_videotoolbox.cpp  pdraw_avcdecoder_videotoolbox.hpp  pdraw_buffer.cpp  pdraw_buffer.hpp  pdraw_bufferqueue.cpp  pdraw_bufferqueue.hpp  pdraw_channel.cpp  pdraw_channel.hpp  pdraw_channel_audio.cpp  pdraw_channel_audio.hpp  pdraw_channel_coded_video.cpp  pdraw_channel_coded_video.hpp  pdraw_channel_raw_video.cpp  pdraw_channel_raw_video.hpp  pdraw_decoder.hpp  pdraw_decoder_audio.cpp  pdraw_decoder_audio.hpp  pdraw_decoder_video.cpp  pdraw_decoder_video.hpp  pdraw_demuxer.cpp  pdraw_demuxer.hpp  pdraw_demuxer_record.cpp  pdraw_demuxer_record.hpp  pdraw_demuxer_record_audio_media.cpp  (+142 more)
python/: atom.mk  test.py  typemaps_pdraw.i  typemaps_std.i
qpdraw/: atom.mk  qpdraw.pro
qpdraw/include/pdraw/: qpdraw.hpp  qpdraw_demuxer.hpp  qpdraw_widget.hpp
qpdraw/src/: qpdraw.cpp  qpdraw_demuxer.cpp  qpdraw_demuxer_priv.hpp  qpdraw_priv.hpp  qpdraw_widget.cpp  qpdraw_widget_priv.hpp
